--- a/EquineTracker/Views/Home/Index.cshtml
+++ b/EquineTracker/Views/Home/Index.cshtml
@@ -2,6 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
+<div class="body-content">
+    <img class="center-block" src="~/images/horse.jpg"/>
+</div>
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
